small spacing fix

--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@ font-family : times;
 font-variant : small-caps;
 font-weight : 300;
 font-size: 150%;
-margin-top : 10px;
+margin-top : 15px;
 margin-left: 0px;
 text-align : center;
 }
